<resources>
    <string name="app_name">Wood System</string>
    <string name="version" translatable="false">Version 1.8.7</string>
    <!--    <string name="version">Version 58.0.6</string>-->

    <string name="stage1">Acceptance &amp; Quality Control</string>
    <string name="stage2">Stage 2</string>
    <string name="stage3">Inventory &amp; Loading</string>

    <string name="enter_inventory">Enter Inventory</string>
    <string name="loading_order">Loading Order</string>
    <string name="reports">Reports</string>

    <string name="th">Thic</string>
    <string name="w">W</string>
    <string name="l">L</string>
    <string name="grade">Grade</string>
    <string name="num_pcs">No Of Pieces</string>
    <string name="bundle_num">Bundle No</string>
    <string name="location">Location</string>
    <string name="loc">Loc</string>
    <string name="area">Area</string>
    <string name="description">Description</string>
    <string name="details">Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_bundle"># Bundles</string>
    <string name="no_pieces"># Pieces</string>
    <string name="loading_order_no">L.order No</string>
    <string name="packing_list">Packing List</string>
    <string name="p_list">P.List</string>

    <string name="company_name">Company Name</string>
    <string name="ip_address">IP Address</string>
    <string name="store">Store</string>

    <string name="placing_no">Truck No</string>
    <string name="order_no">Order No</string>
    <string name="container_no">Container No</string>
    <string name="date_of_load">Date Of Load</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>

    <string name="clear_fields">Clear Fields</string>
    <string name="new_bundle">New Bundle</string>
    <string name="thickness">Thick</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="no_of_pieces">Pieces</string>
    <string name="bundle_no">Bundle #</string>
    <string name="cubic">Cubic</string>

    <string name="username">Username</string>
    <string name="password">Password</string>

    <string name="search_by_barcode">"Search by barcode</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="add_bundle">Add Bundle</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="generate_bundle_no">Generate Bundle #</string>
    <string name="barcode">Barcode</string>

    <string name="bundles">Bundles Report</string>
    <string name="print_barcode_report">Print Barcode</string>
    <string name="orders">Orders Report</string>
    <string name="inventory_report">Inventory Report</string>
    <string name="loading_order_report">Loading Order Report</string>
    <string name="loading_order_report2">Loading Order Report</string>
    <string name="placing_no_">Truck No</string>
    <string name="order_no_">Order No</string>
    <string name="container_no_">Container#</string>

    <string name="about_developers">About Developers</string>
    <string name="falcons_soft">Falcons Soft</string>
    <string name="report">Report</string>
    <string name="print_all">Print All</string>
    <string name="delete_all">Delete All</string>
    <string name="print">Print</string>
    <string name="serial">Serial</string>
    <string name="serial_no">Serial No</string>
    <string name="delete">Delete</string>
    <string name="hide">Hide</string>

    <string name="new_raw">New Raw</string>
    <string name="supplier_no">Supplier #</string>
    <string name="supplier_name">Supplier</string>
    <string name="raw_thickness">Thickness</string>
    <string name="search">Search ...</string>
    <string name="acceptance_info">Acceptance Info</string>
    <string name="generate_barcode">Generate Barcode</string>

    <string name="cust">Customer</string>
    <string name="cust_no">Customer #</string>
    <string name="new_cust">New Customer</string>
    <string name="find_cust">Find Customer</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_no_item">Edit Number of Bundles</string>
    <string name="no_of_copy">No Of Copies</string>
    <string name="closed_results">Closed Results</string>
    <string name="destination_">Dest</string>
    <string name="comparable_results">Comparable Results :</string>
    <string name="total_cbm">Total CBM</string>
    <string name="planned_report">Planned Packing List Report</string>

    <string name="accept_raw">Accept Row</string>
    <string name="name_of_supplier">Name Of Supplier</string>
    <string name="truck_no">Truck No</string>
    <string name="date_of_acceptance">Acceptance Date</string>
    <string name="name_of_person_to_accept">Acceptor Name</string>
    <string name="location_of_acceptance">Acc Loc</string>
    <string name="ttn_no">TTN NO</string>
    <string name="rejection_list">Rejection List</string>
    <string name="new_supplier">New Supplier</string>
    <string name="find_supplier">Find Supplier</string>
    <string name="rejected_pieces_on_truck">Rejected Pieces</string>

    <string name="generate_Barcode">Generate Barcode</string>
    <string name="ordered">Ordered</string>

    <string name="edit">Edit</string>
    <string name="q1">Are you want delete bundle number: </string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="action">Choose Action</string>
    <string name="apply">Apply</string>

    <string name="search_width">Search Width</string>
    <string name="search_length">Search Length</string>
    <string name="search_thic">Search Thick</string>

    <string name="fresh">Fresh</string>
    <string name="bs">BS</string>
    <string name="reject">Rejected</string>

    <string name="zone_1">Zone 1</string>
    <string name="zone_2">Zone 2</string>
    <string name="zone_3">Zone 3</string>
    <string name="zone_4">Zone 4</string>
    <string name="zone_5">Zone 5</string>

    <string name="ukranian_wood">Ukrainian Wood</string>
    <string name="bundle_origin">Bundle Origin</string>
    <string name="finland_wood">Finland Wood</string>
    <string name="decore_wood">Decore Wood</string>
    <string name="german_wood">German Wood</string>
    <string name="romanian_wood">Romanian Wood</string>
    <string name="russian_wood">Russian Wood</string>
    <string name="canadian_wood">Canadian Wood</string>
    <string name="swedian_wood">Swedian Wood</string>
    <string name="latvian_wood">Latvian Wood</string>

    <string name="rejected_pieces"># Rejected</string>
    <string name="main_info">Main Info</string>
    <string name="net">Net Bundles</string>

    <string name="acceptance_report">Acceptance Report</string>
    <string name="truck">Truck</string>
    <string name="acceptor">Acceptor</string>
    <string name="ttn">TTN</string>
    <string name="acceptance_loc">A.Location</string>
    <string name="f_w">F.W</string>
    <string name="t_w">T.W</string>
    <string name="f_l">F.L</string>
    <string name="t_l">T.L</string>
    <string name="choose_rows">Please Choose Rows First!</string>
    <string name="not_authorized">Not Authorized!</string>
    <string name="loaded">Loaded</string>
    <string name="unloaded">Unloaded</string>
    <string name="unloaded_successfully">Unloaded Successfully</string>
    <string name="f">F</string>
    <string name="loaded_packing_list_report">Loaded Packing List Report</string>
    <string name="planned_unplanned_inventory_report">Planned Unplanned Inventory Report</string>

    <string name="export_to_pdf">Export To PDF</string>
    <string name="edit_confirm_message">Are you want save the changes first?</string>
    <string name="export_to_excel">Export To Excel</string>
    <string name="truck_acceptance">Truck Acceptance</string>
    <string name="accepted_truck_report">Accepted Truck Report</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="planned_packing_list">Add New packing list</string>
    <string name="pdf">PDF</string>
    <string name="excel">Excel</string>
    <string name="transferBundle">Transfer Bundle</string>
    <string name="transfer">transfer</string>
    <string name="scanBarcode">scan Barcode</string>
    <string name="old_bundle_no">old Bundle no</string>
    <string name="new_bundle_no">new Bundle no</string>
    <string name="clear">Clear</string>
    <string name="email">Email</string>
    <string name="fromEmail">from Email</string>
    <string name="toEmail">to Email</string>
    <string name="subject">subject</string>
    <string name="rejectC">Cubic Reg</string>
    <string name="no_of_p_reject"># Pieces/Rej</string>
    <string name="no_pieces_accept"># Pieces/Accept</string>
    <string name="no_pieces_rej"># Pieces Rej</string>
    <string name="truck_cbm">Truck CBM</string>
    <string name="rejcmb">Rej CBM</string>
    <string name="cbmAccept">Accept CBM</string>
    <string name="totalTCbm">total Truck CBM</string>
    <string name="totalRejCbm">total Rej CBM</string>
    <string name="totalAccCbm">total Accept CBM</string>
    <string name="msg_sending_email">Sending</string>
    <string name="accept_report_supplier">Accept Report / Supplier</string>
    <string name="accept_report_truck">Accept Report / Truck</string>
    <string name="preview">preview</string>
    <string name="SupplierAccount">Supplier Account</string>
    <string name="Debt_">Debt $</string>
    <string name="cash_">Cash $</string>
    <string name="price">Price</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="Value">Value</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="payer">Payer</string>
    <string name="paymenttype">Payment Type</string>
    <string name="totalCash">Total Cash</string>
    <string name="totalBank">Total Bank</string>
    <string name="Balance">Balance</string>
    <string name="SupplierAccountReport">Supplier Account Report</string>
    <string name="paymentDate">Payment Date</string>
    <string name="PaymentSupplierReport">Payment Supplier Report</string>
    <string name="total_bank_payment">total Bank Payment</string>
    <string name="total_cash_payment">total cash Payment</string>
    <string name="start_bank_balance">start Bank Balance</string>
    <string name="start_cash_balance">start cash Balance</string>
    <string name="remaining_bank">remaining bank</string>
    <string name="remaining_cash">remaining Cash</string>
    <string name="SupplierPaymentReport">"Supplier Payment Report "</string>

</resources>
