<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:paddingVertical="10dp"
        android:background="@color/light_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_report_linear3">

        <CheckBox
            android:id="@+id/checkBoxPrint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:id="@+id/serial"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="serif"
            android:text="@string/serial"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/bundle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:fontFamily="serif"
            android:text="@string/bundle_no"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/th"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/th"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/w"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:fontFamily="serif"
            android:text="@string/w"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/l"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:fontFamily="serif"
            android:text="@string/l"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pcs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/no_pieces"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/grade"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.9"
            android:fontFamily="serif"
            android:text="@string/grade"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:fontFamily="serif"
            android:text="@string/loc"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/area"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/area"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/pl"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/p_list"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/inventoryReportRaw_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:paddingHorizontal="10dp"
            android:src="@drawable/ic_edit_24dp"
            android:tint="@color/orange"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"/>

    </TableRow>

</LinearLayout>