<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/light_orange"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inventory_report_linear3">

        <CheckBox
            android:id="@+id/acceptanceInfo_raw_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp" />

        <TextView

            android:id="@+id/acceptanceInfo_raw_supplier"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:fontFamily="serif"
            android:text="@string/supplier_name"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_bundle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/bundle_no"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_thick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/th"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_width"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/w"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_length"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/l"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_pcs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/no_pieces"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_grade"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/grade"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />
        <TextView
            android:visibility="gone"
            android:id="@+id/acceptanceInfo_raw_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"
            android:fontFamily="serif"
            android:text="@string/loc"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_rejected"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/reject"
            android:textColor="@color/gray_dark_one"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_pic"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/ic_image_orange" />

        <TextView
            android:id="@+id/acceptanceInfo_raw_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/ic_edit_24dp"
            android:backgroundTint="@color/orange"/>

    </TableRow>

</LinearLayout>