<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/editRow_supplier"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/supplier_name"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/editRow_thickness"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/thickness"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/editRow_width"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/width"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/editRow_length"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/length"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/editRow_pieces"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/no_pieces"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/editRow_rejected"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/reject"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/editRow_bundles"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/no_bundle"
        android:textSize="15sp"
        />

    <TextView
        android:id="@+id/editRow_grade"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:background="@color/light_orange"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/grade"
        android:textSize="15sp"
        />

    <ImageView
        android:id="@+id/editRow_edit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/light_orange"
        android:src="@drawable/ic_baseline_edit_o"
        />
    <ImageView
        android:id="@+id/editRow_delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:background="@color/light_orange"
        android:src="@drawable/ic_baseline_delete_forever"
        />

</LinearLayout>